# binscope

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  json-output.md  triage-playbook.md
docs/examples/: sample-pe-report.json  sample-pe-report.txt  sample-summary.json
scripts/: ci-local.sh  find-test-binaries.sh  json-smoke.sh
src/: analyzer.rs  cli.rs  entropy.rs  hash.rs  lib.rs  main.rs  model.rs  render.rs  strings.rs
testdata/: README.md  samples.json
testdata/fixtures/: sample_macho
tests/: fixtures.rs
