[package]
name = "binscope"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
object = { version = "0.37.3", default-features = false, features = ["read", "std", "elf", "pe", "macho"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
